tests/ui/inference/issue-104649.stderr
error[E0282]: type annotations needed for `A<std::result::Result<std::result::Result<(), _>, Error>>`
  --> $DIR/issue-104649.rs:24:9
   |
LL |     let a = A(Result::Ok(Result::Ok(())));
   |         ^                -------------- type must be known at this point
   |
note: type must be known for type parameter in this
  --> $DIR/issue-104649.rs:1:1
   |
LL | type Result<T, E = Error> = ::std::result::Result<T, E>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider giving `a` an explicit type, where the type for type parameter `E` is specified
   |
LL |     let a: A<std::result::Result<std::result::Result<_, E>, _>> = A(Result::Ok(Result::Ok(())));
   |          ++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
